<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/fragment_vertical_margin">

    <LinearLayout
        android:id="@+id/buy_asset_main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Buying an asset"
            android:textColor="@color/light_text_color"
            android:textSize="21sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/buy_asset_sum_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:hint="@string/sum_label"
            android:textColorHint="@color/darker_text_color"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@color/light_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/buy_asset_sum_et"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/background_dark_light_field"
                android:inputType="numberDecimal"
                android:textColor="@color/light_text_color"
                android:textCursorDrawable="@null"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buy_asset_btn"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_margin="@dimen/fragment_vertical_margin"
            android:paddingLeft="@dimen/side_padding_btn_login"
            android:paddingRight="@dimen/side_padding_btn_login"
            android:text="@string/buy_label"
            android:background="@drawable/background_login_btn"
            android:theme="@style/ButtonLoginStyle"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="visible"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/success_buying_asset_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/success_title_message_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congrats"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:textSize="26sp"
            android:textColor="@color/success_message_color"/>

        <TextView
            android:id="@+id/success_message_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_buying_asset"
            android:textStyle="normal"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@color/light_text_color"
            android:layout_below="@id/success_title_message_label"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buy_asset_navigate_to_main_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingLeft="@dimen/side_padding_btn_login"
            android:paddingRight="@dimen/side_padding_btn_login"
            android:text="@string/to_main_screen"
            android:background="@drawable/background_login_btn"
            android:theme="@style/ButtonLoginStyle"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:visibility="visible"
            android:layout_below="@id/success_message_label"/>

    </RelativeLayout>

</RelativeLayout>