<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/project_fragment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        tools:layout_height="56dp"
        android:background="@android:color/black"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/project_fragment_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:layout_centerVertical="true"
                android:padding="@dimen/fragment_horizontal_margin"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <TextView
                android:id="@+id/project_title_toolbar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/light_text_color"
                android:maxLines="1"
                android:textSize="20sp"
                android:layout_toEndOf="@id/project_fragment_back_btn"
                android:layout_marginStart="@dimen/fragment_horizontal_margin"
                android:textStyle="bold"
                android:text="@string/project_label"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/project_detail_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/LoginProgressBar"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_fragment_toolbar">

        <LinearLayout
            android:id="@+id/project_detail_main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/thumb_project"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:src="@drawable/project_thumb"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/project_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fragment_vertical_margin"
                android:textSize="21sp"
                tools:text="Стартап"
                android:textColor="@color/project_title_color"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/project_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/project_desc_color"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:layout_marginLeft="@dimen/fragment_vertical_margin"
                android:layout_marginRight="@dimen/fragment_vertical_margin"
                tools:text="Описание"/>

            <TextView
                android:id="@+id/project_contribution_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/project_desc_color"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:layout_marginLeft="@dimen/fragment_vertical_margin"
                android:layout_marginRight="@dimen/fragment_vertical_margin"
                android:text="@string/contribution_label"/>

            <TextView
                android:id="@+id/project_contribution_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="@color/light_text_color"
                android:layout_marginLeft="@dimen/fragment_vertical_margin"
                android:layout_marginRight="@dimen/fragment_vertical_margin"
                tools:text="5000"/>

            <TextView
                android:id="@+id/project_shapes_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/project_desc_color"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:layout_marginLeft="@dimen/fragment_vertical_margin"
                android:layout_marginRight="@dimen/fragment_vertical_margin"
                android:text="@string/number_of_shapes_label"/>

            <TextView
                android:id="@+id/project_shapes_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="@color/light_text_color"
                android:layout_marginLeft="@dimen/fragment_vertical_margin"
                android:layout_marginRight="@dimen/fragment_vertical_margin"
                tools:text="5000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/fragment_vertical_margin">

                <Button
                    android:id="@+id/project_sell_assets"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/fragment_vertical_margin"
                    android:text="@string/sell_assets_label"
                    android:background="@drawable/background_login_btn"
                    android:theme="@style/ButtonLoginStyle"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    android:textSize="10sp"/>

                <Button
                    android:id="@+id/project_buy_more_assets"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:layout_margin="@dimen/fragment_vertical_margin"
                    android:text="@string/buy_more_assets_label"
                    android:background="@drawable/background_login_btn"
                    android:theme="@style/ButtonLoginStyle"
                    android:layout_gravity="center"
                    android:visibility="visible"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>